Bug 1173398: reduce the number of visible buttons at the top right of the page

--- a/extensions/BugModal/web/bug_modal.css
+++ b/extensions/BugModal/web/bug_modal.css
@@ -729,6 +729,7 @@ td.flag-requestee {
 
 #mode-container .button-row {
     margin-top: 1px;
+    border-left: 5px solid white;
 }
 
 /* theme */
